Fixed aff plugin

--- a/AffiliatedSchools/plugin.xml
+++ b/AffiliatedSchools/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://plugin.powerschool.pearson.com"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" description="Customizations specific to Prince Edward Island" name="PEI Customizations - Affiliated Schools version="1.1.2a" xsi:schemaLocation="http://plugin.powerschool.pearson.com plugin.xsd">
-<publisher name="Luke Walker, Dept of Education and Lifelong Learning">
-<contact email="lawalker@edu.pe.ca"/>
-</publisher>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" description="Customizations specific to Prince Edward Island" name="PEI Customizations - Affiliated Schools" version="1.1.2a" xsi:schemaLocation="http://plugin.powerschool.pearson.com plugin.xsd">
+  <publisher name="Luke Walker, Dept of Education and Lifelong Learning">
+    <contact email="lawalker@edu.pe.ca"/>
+  </publisher>
 </plugin>
