Add link to BusPlanner to student header

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 _Versions/
-_ZIPs/                                                                                                                                     *.zip                                                                        
+_ZIPs/
+*.zip                                                                        
