--- a/plugin.xml
+++ b/plugin.xml
@@ -4,9 +4,14 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   description="Customizations specific to Prince Edward Island"
   name="PEI Customizations"
-  version="1.1.2"
+  version="1.2"
   xsi:schemaLocation="http://plugin.powerschool.pearson.com plugin.xsd">
   <publisher name="Luke Walker, Dept of Education and Lifelong Learning">
     <contact email="lawalker@edu.pe.ca"/>
   </publisher>
+    <access_request>
+      <cdn_request>
+          <cdn name="https://www.arcgis.com"/>
+      </cdn_request>
+    </access_request>
 </plugin>
