Updates for EUI, still incoporating new pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 _Versions/
 _ZIPs/
-*.zip                                                                        
+*.zip 
+.DS_Store
+                                                                       
