--- a/plugin.xml
+++ b/plugin.xml
@@ -4,10 +4,10 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   description="Customizations specific to Prince Edward Island"
   name="PEI Customizations"
-  version="1.2"
+  version="2024.1.1"
   xsi:schemaLocation="http://plugin.powerschool.pearson.com plugin.xsd">
-  <publisher name="Luke Walker, Dept of Education and Lifelong Learning">
-    <contact email="lawalker@edu.pe.ca"/>
+  <publisher name="Luke Walker, Dept of Education and Early Years">
+    <contact email="lawalker@gov.pe.ca"/>
   </publisher>
     <access_request>
       <cdn_request>
