Add Legal Name Change Archive

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ _Versions/
 _ZIPs/
 *.zip 
 .DS_Store
+Other files\compare.html
                                                                        
